updated alignment +sizing issue fixed again

--- a/styles/blogs.css
+++ b/styles/blogs.css
@@ -207,6 +207,7 @@
     padding: 10px 20px;
     border: none;
     text-decoration: none;
+    border-radius: 8px;
 }
 
 .learn-more-2 {
@@ -215,6 +216,7 @@
     padding: 10px 20px;
     border: none;
     text-decoration: none;
+    border-radius: 8px;
 }
 
 .learn-more-3 {
@@ -224,6 +226,7 @@
     border: none;
     margin-top: 40px;
     text-decoration: none;
+    border-radius: 8px;
 }
 
 /* Dr-yunus-description */
@@ -318,7 +321,7 @@
 }
 
 .donate-heading {
-    margin-top: 80px;
+    margin-top: 30px;
     font-size: 40px;
     font-weight: 700;
     padding-top: 36px;
@@ -336,30 +339,28 @@
 }
 
 /* donate amount */
-body ul>li {
-    gap: 24px;
-
-}
 
 ul{
     width: 100%;
     display: flex;
+    gap:24px ;
     /* margin-left: 160px;
     margin-right: 160px; */
     list-style: none;
     margin-top: 32px;
+    justify-content: space-evenly;
+   
+
 }
 
 ul li {
-
-    height: 60px;
-    margin-left: 100px;
-    margin-right: 100px;
+    height:50px;
+    /* margin-left: 100px;
+    margin-right: 100px; */
     background-color: #FFFFFF;
-    justify-content: space-around;
     border-radius: 16px;
     opacity: 100%;
-    padding: 30px 40px;
+    padding: 30px;
     border: 1px solid rgb(207, 206, 206);
 }
 
@@ -405,7 +406,7 @@ footer {
     border-radius: 24px;
     margin-left: 170px;
     margin-right: 170px;
-    margin-top: 40px;
+    margin-top: 20px;
 }
 
 .footer-container {
